@@ -22,6 +22,8 @@ scalacOptions += "-deprecation"
 
 scalacOptions += "-target:jvm-1.8"
 
+trapExit := false
+
 licenses += "Apache License, Version 2.0" -> url("http://www.apache.org/licenses/LICENSE-2.0.html")
 
 homepage := Some(url("https://github.com/gwen-interpreter/gwen"))
